fix layout issue with aside element on mission page

--- a/source/stylesheets/partials/_mission.scss
+++ b/source/stylesheets/partials/_mission.scss
@@ -1,26 +1,27 @@
-  
-  article {
-    @include outer-container;
-    h1 {
-      @include media($medium-screen) {
-        text-align: left;
-      }
-    }
-    h2 {
-      @include media($medium-screen) {
-        margin-bottom: em(10);
-      }
-    }
-
+article.mission {
+  @include outer-container;
+  h1 {
     @include media($medium-screen) {
-      .content {
-        @include span-columns(8);
-        padding-right: em(40);
-        float: left;
-      }
-      aside {
-        float: right;
-      }
+      text-align: left;
     }
-
   }
+  h2 {
+    @include media($medium-screen) {
+      margin-bottom: em(10);
+    }
+  }
+
+  @include media($medium-screen) {
+    .content {
+      @include span-columns(8 of 12);
+      padding-right: em(40);
+      float: left;
+    }
+    aside {
+      float: right;
+      margin-left: 0;
+      @include span-columns(4 of 12);
+    }
+  }
+
+}
